# AlbumMagic2

./: .env  .gitignore  Cargo.toml
backend/: .env  .gitignore  .spotify_token_cache.json  Cargo.toml
backend/essentials/: Cargo.toml
backend/essentials/src/: color.rs  error.rs  lib.rs
backend/src/: main.rs  test.rs
backend/src/api/: current_song.rs  get_lyrics.rs  login.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/css/: main.css  main.css.map
frontend/src/functions/: GetApi.tsx
frontend/src/scss/: main.scss
src/: main.rs
