[package]
name = "AlbumMagic2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
rspotify = { version = "0.14.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
futures = "0.3.17"
serde_json = { version = "1.0", features = ["preserve_order"] }
