[package]
name = "AlbumMagic2"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.14.0", features = ["cli"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
dotenv = "0.15.0"
anyhow = "1.0.44"
essentials = { path = "./essentials" }
clearscreen = "4.0.1"
rascii_art = "0.4.5"
reqwest = "0.12.12"
termion = "1.5"
terminal_size = "0.1"
unicode-width = "0.1"
