[package]
name = "AlbumMagic2"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.14.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
dotenv = "0.15.0"
anyhow = "1.0.44"
essentials = { path = "./essentials" }
clearscreen = "4.0.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
axum = "0.8.1"
chrono = "0.4.19"
serde_json = "1.0.68"
image = "0.25.5"
rand = "0.9.0"
tower-http = { version = "0.6.2", features = ["cors"] }
